자바 버전에 따른 수정